[project]
name = "rc-dunning-agent"
version = "0.1.0"
description = "Automated payment recovery / dunning manager for RevenueCat"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2",
    "typer",
    "rich",
    "click",
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pytest-httpx",
]

[project.scripts]
rda = "rc_dunning_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rc_dunning_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
